--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.4.0",
+    "express-status-monitor": "^1.3.4",
     "helmet": "^5.0.2",
     "http-status": "^1.5.2",
     "joi": "^17.6.0",
